# Pytorch_Static_Memory_Analyzer-Desktop_version

./: README.md
1_ExportingIR/: 1_exportIr.py  2_testPre.py  requirements.txt
2_EstimateMem/: CMakeLists.txt  main.cpp  requirements.txt
data/: alexnetb1_traced.ir.txt  mobilenet_v3_smallb1_traced.ir.txt  resnet101b1_traced.ir.txt  resnet50b1_traced.ir.txt  vgg16b1_traced.ir.txt
